force-app/main/default/objects/NEPA_ActionPlan_Config__mdt/NEPA_ActionPlan_Config__mdt.object-meta.xml
<CustomObject>
    <description>Maps NEPA pathway and project type to the correct ActionPlanTemplate DeveloperName and trigger stage. Used by NEPA_ActionPlan_Launcher flow. Add a record here for every new permit group — no flow changes needed.</description>
    <label>NEPA Action Plan Config</label>
    <pluralLabel>NEPA Action Plan Configs</pluralLabel>
</CustomObject>