force-app/main/default/objects/NEPA_ActionPlan_Config__mdt/fields/NEPA_Pathway__c.field-meta.xml
<CustomField>
    <fullName>NEPA_Pathway__c</fullName>
    <description>CE, EA, or EIS — matches IndividualApplication.NEPA_Pathway__c</description>
    <label>NEPA Pathway</label>
    <length>10</length>
    <type>Text</type>
</CustomField>