force-app/main/default/objects/NEPA_ActionPlan_Config__mdt/fields/Project_Type_Match__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Match__c</fullName>
    <description>Semicolon-delimited list of Project_Type__c values that route to this template (e.g., "Pipelines;LNG Export / Import Facility")</description>
    <label>Project Type Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>