force-app/main/default/objects/NEPA_ActionPlan_Config__mdt/fields/Template_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Template_DeveloperName__c</fullName>
    <description>DeveloperName of the ActionPlanTemplate to instantiate (e.g., NEPA_EIS_Energy_Pipeline_LNG)</description>
    <label>Template Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>