force-app/main/default/objects/NEPA_ActionPlan_Config__mdt/fields/Trigger_Stage__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Stage__c</fullName>
    <description>Stage__c value that fires the launcher: Determination (CE) or Coordination (EA/EIS)</description>
    <label>Trigger Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>